--- a/style.css
+++ b/style.css
@@ -27,6 +27,90 @@ html {
     font: 400 15px/1.8 "puhuiti", sans-serif;
 }
 
+/* 侧边栏 */
+.icon-bar {
+    position: fixed;
+    width: 60px;
+    /* 设置特定宽度 */
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    top: 50%;
+    transform: translateY(-50%);
+    left: 20px;
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    z-index: 998;
+    /* 确保在页面上方 */
+}
+
+.icon-bar a {
+    display: block;
+    /* 使链接显示在彼此下方而不是并排显示 */
+    text-align: center;
+    /* 居中对齐文本 */
+    padding: 16px;
+    /* 添加一些填充 */
+    transition: all 0.3s ease;
+    /* 为悬停效果添加过渡 */
+    color: grey;
+    /* 白色文字颜色 */
+    font-size: 24px;
+    /* 增加字体大小 */
+}
+
+.icon-bar a:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    /* 和侧边栏 同步圆角*/
+}
+
+.icon-bar-mobile {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.1);
+    z-index: 998;
+    /* 确保在页面上方 */
+}
+
+.icon-bar-mobile a {
+    float: left;
+    width: 20%;
+    text-align: center;
+    padding: 12px 0;
+    transition: all 0.3s ease;
+    color: gray;
+    font-size: 24px;
+}
+
+.icon-bar-mobile a:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    /* 和侧边栏 同步圆角*/
+}
+
+.active {
+    background-color: rgba(0, 0, 0, 0.1);
+    /* 添加活动/当前颜色 */
+    border-radius: 8px;
+    /* 和侧边栏 同步圆角*/
+}
+
+@media only screen and (max-width: 767px) {
+    .active {
+        border-radius: 0px;
+    }
+}
+
+.icon-bar-margin {
+    margin: 4px 0;
+    /* 添加上下边距 */
+}
+
 /* 导航栏 */
 .header {
     position: sticky;
@@ -67,6 +151,8 @@ html {
 @media only screen and (max-width: 767px) {
     .bgimg-1 {
         background-image: url("./img/title2.png");
+        min-height: calc(100% - 72px) !important;
+        height: calc(100% - 72px) !important;
     }
 }
 
@@ -116,7 +202,7 @@ html {
 /* 标题-移动版 */
 .header-text-mobile {
     position: absolute;
-    bottom: 0px;
+    bottom: 72px;
     left: 0px;
     width: 100%;
     color: #fff;
@@ -217,6 +303,6 @@ html {
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.cite{
+.cite {
     font: 14px "SongTi", sans-serif;
 }
