--- a/style.css
+++ b/style.css
@@ -294,6 +294,10 @@ html {
     padding-top: 50px;
 }
 
+.container-padding-top-first {
+    padding-top: 72px;
+}
+
 .shadow-box {
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
 }
