--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ html {
     transform: translateY(-50%);
     left: 20px;
     margin: 0 auto;
-    border-radius: 8px;
+    border-radius: 16px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
     z-index: 998;
     /* 确保在页面上方 */
@@ -99,23 +99,17 @@ html {
 }
 
 .icon-bar a:hover {
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    /* 和侧边栏 同步圆角*/
-}
-
-.icon-bar-mobile a:hover {
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.08);
+    border-radius: 16px;
     /* 和侧边栏 同步圆角*/
 }
 
 .icon-bar-mobile {
     position: fixed;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     overflow: auto;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(10px);
     box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.1);
     z-index: 998;
@@ -126,10 +120,17 @@ html {
     float: left;
     width: 20%;
     text-align: center;
-    padding: 6px 0;
+    padding-top: 6px;
     transition: all 0.3s ease;
     color: gray;
     font-size: 24px;
+}
+
+.icon-bar-mobile a:hover {
+    background-color: rgba(0, 0, 0, 0.08);
+    border-radius: 24px;
+    padding-bottom: 0px;
+    /* 和侧边栏 同步圆角*/
 }
 
 .icon-bar-margin {
@@ -150,7 +151,7 @@ html {
     top: 0;
     left: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     /* 标题栏的背景色 */
     backdrop-filter: blur(10px);
     color: #111;
@@ -162,7 +163,29 @@ html {
 }
 
 .hidden {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.visible {
+    opacity: 1;
+    visibility: visible;
+}
+
+#chapter-1-header {
+    transition: opacity 0.3s ease;
+}
+
+#chapter-2-header {
+    transition: opacity 0.3s ease;
+}
+
+#chapter-3-header {
+    transition: opacity 0.3s ease;
+}
+
+#chapter-4-header {
+    transition: opacity 0.3s ease;
 }
 
 /* 标题图片 */
