--- a/style.css
+++ b/style.css
@@ -128,25 +128,28 @@ html {
     z-index: 998;
 }
 
-.icon-text{
+.icon-text {
     display: block;
     opacity: 0%;
-    padding-top: 12px;
     position: absolute;
     color: var(--color-navy-blue);
     font-size: 13px;
 }
 
-.icon-bar span{
+.icon-bar .icon-text {
+    padding-top: 12px;
+}
+
+.icon-bar span {
     color: var(--color-navy-blue);
     transition: all 0.3s ease;
 }
 
-.icon-bar a .icon-text{
+.icon-bar a .icon-text {
     transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
-.icon-bar-mobile span{
+.icon-bar-mobile span {
     color: var(--color-navy-blue);
 }
 
@@ -165,21 +168,21 @@ html {
     border-radius: var(--iconbar-border-radius);
 }
 
-.icon-bar a:hover .icon-text{
+.icon-bar a:hover .icon-text {
     opacity: 100%;
     transform: translateY(4px);
 }
 
-.icon-bar a:hover span{
+.icon-bar a:hover span {
     transform: translateY(-10px);
 }
 
-.top-icon{
+.top-icon {
     border-top-left-radius: var(--iconbar-border-radius);
     border-top-right-radius: var(--iconbar-border-radius);
 }
 
-.bottom-icon{
+.bottom-icon {
     border-bottom-left-radius: var(--iconbar-border-radius);
     border-bottom-right-radius: var(--iconbar-border-radius);
 }
@@ -254,18 +257,9 @@ html {
     visibility: visible;
 }
 
-#chapter-1-header {
-    transition: opacity 0.3s ease;
-}
-
-#chapter-2-header {
-    transition: opacity 0.3s ease;
-}
-
-#chapter-3-header {
-    transition: opacity 0.3s ease;
-}
-
+#chapter-1-header,
+#chapter-2-header,
+#chapter-3-header,
 #chapter-4-header {
     transition: opacity 0.3s ease;
 }
@@ -473,3 +467,107 @@ html {
     font: 14px "SongTi", sans-serif;
 }
 
+nav {
+    float: right;
+    display: flex;
+    align-items: center;
+}
+
+nav span {
+    margin-right: 6px;
+    color: var(--color-dusty-blue);
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown a {
+    color: var(--color-dusty-blue);
+}
+
+.dropbtn {
+    border: 1px solid var(--color-pastel-blue);
+    border-radius: 8px;
+    padding: 4px 8px;
+    font-size: 16px;
+    color: var(--color-dusty-blue);
+    text-decoration: none;
+}
+
+.dropbtn:hover {
+    color: var(--color-navy-blue);
+}
+
+.dropbtn:focus {
+    color: var(--color-dusty-blue);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    margin-top: 6px;
+    right: 0;
+    background-color: rgba(249, 249, 249, 0.9);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border: 1px solid var(--color-pastel-blue);
+    border-radius: 8px;
+    overflow: hidden;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+}
+
+#dropdown-content{
+    transition: all 0.3s ease;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    color: var(--color-dark-blue);
+    background-color: var(--color-light-blue);
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: var(--color-pastel-blue)
+}
+
+.comic-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.dialogue {
+    max-width: 70%;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    position: relative;
+}
+
+.comic-left {
+    background-color: #cdf;
+    margin-right: 50px;
+}
+
+.comic-right {
+    margin-left: 50px;
+    background-color: #fcd;
+}
+
+.comic-center {
+    background-color: #cdf;
+}
