--- a/style_preset.css
+++ b/style_preset.css
@@ -5,14 +5,17 @@
     --color-faded-blue: rgb(175, 188, 206);
     --color-medium-blue: rgb(96, 137, 184);
     --color-dusty-blue: rgb(118, 145, 176);
+    --color-dark-blue: rgb(0, 74, 159);
     --color-navy-blue: rgb(80, 92, 116);
 
-    --color-gradient-stop-1: #4285f4;
-    --color-gradient-stop-2: #9b72cb;
-    --color-gradient-stop-3: #d96570;
-    --color-gradient-stop-4: #dd812b;
-    --color-gradient-stop-5: #896387;
-    --color-gradient-stop-6: #3469e3;
+    --color-gradient-stop-1-1: #4285f4;
+    --color-gradient-stop-1-2: #9b72cb;
+    --color-gradient-stop-1-3: #d96570;
+
+    --color-gradient-stop-2-1: #dd812b;
+    --color-gradient-stop-2-2: #896387;
+    --color-gradient-stop-2-3: #3469e3;
+    
     --color-surface: #fff;
 
     --color-asia: #FBC02D;
@@ -24,8 +27,19 @@
 }
 
 /* 预设值 */
-:root{
+:root {
     --iconbar-border-radius: 16px;
+}
+
+@keyframes slideBackground {
+    from {
+        background-position: 100% 50%;
+        opacity: 0.5;
+    }
+    to {
+        background-position: 0% 50%;
+        opacity: 1;
+    }
 }
 
 /* 渐变预设 */
@@ -33,8 +47,8 @@
     position: relative;
     display: inline-block;
     color: transparent;
-    background: -webkit-linear-gradient(16deg, var(--color-gradient-stop-1) 0, var(--color-gradient-stop-2) 9%, var(--color-gradient-stop-3) 20%, var(--color-gradient-stop-3) 24%, var(--color-gradient-stop-2) 35%, var(--color-gradient-stop-1) 44%, var(--color-gradient-stop-2) 50%, var(--color-gradient-stop-3) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
-    background: linear-gradient(74deg, var(--color-gradient-stop-1) 0, var(--color-gradient-stop-2) 9%, var(--color-gradient-stop-3) 20%, var(--color-gradient-stop-3) 24%, var(--color-gradient-stop-2) 35%, var(--color-gradient-stop-1) 44%, var(--color-gradient-stop-2) 50%, var(--color-gradient-stop-3) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
+    background: -webkit-linear-gradient(16deg, var(--color-gradient-stop-1-1) 0, var(--color-gradient-stop-1-2) 9%, var(--color-gradient-stop-1-3) 20%, var(--color-gradient-stop-1-3) 24%, var(--color-gradient-stop-1-2) 35%, var(--color-gradient-stop-1-1) 44%, var(--color-gradient-stop-1-2) 50%, var(--color-gradient-stop-1-3) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
+    background: linear-gradient(74deg, var(--color-gradient-stop-1-1) 0, var(--color-gradient-stop-1-2) 9%, var(--color-gradient-stop-1-3) 20%, var(--color-gradient-stop-1-3) 24%, var(--color-gradient-stop-1-2) 35%, var(--color-gradient-stop-1-1) 44%, var(--color-gradient-stop-1-2) 50%, var(--color-gradient-stop-1-3) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
     background-size: 400% 100%;
     -webkit-background-clip: text;
     background-clip: text;
@@ -45,8 +59,8 @@
     position: relative;
     display: inline-block;
     color: transparent;
-    background: -webkit-linear-gradient(16deg, var(--color-gradient-stop-3) 0, var(--color-gradient-stop-2) 9%, var(--color-gradient-stop-1) 20%, var(--color-gradient-stop-1) 24%, var(--color-gradient-stop-2) 35%, var(--color-gradient-stop-3) 44%, var(--color-gradient-stop-2) 50%, var(--color-gradient-stop-1) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
-    background: linear-gradient(74deg, var(--color-gradient-stop-3) 0, var(--color-gradient-stop-2) 9%, var(--color-gradient-stop-1) 20%, var(--color-gradient-stop-1) 24%, var(--color-gradient-stop-2) 35%, var(--color-gradient-stop-3) 44%, var(--color-gradient-stop-2) 50%, var(--color-gradient-stop-1) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
+    background: -webkit-linear-gradient(16deg, var(--color-gradient-stop-1-3) 0, var(--color-gradient-stop-1-2) 9%, var(--color-gradient-stop-1-1) 20%, var(--color-gradient-stop-1-1) 24%, var(--color-gradient-stop-1-2) 35%, var(--color-gradient-stop-1-3) 44%, var(--color-gradient-stop-1-2) 50%, var(--color-gradient-stop-1-1) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
+    background: linear-gradient(74deg, var(--color-gradient-stop-1-3) 0, var(--color-gradient-stop-1-2) 9%, var(--color-gradient-stop-1-1) 20%, var(--color-gradient-stop-1-1) 24%, var(--color-gradient-stop-1-2) 35%, var(--color-gradient-stop-1-3) 44%, var(--color-gradient-stop-1-2) 50%, var(--color-gradient-stop-1-1) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
     background-size: 400% 100%;
     -webkit-background-clip: text;
     background-clip: text;
@@ -57,12 +71,16 @@
     position: relative;
     display: inline-block;
     color: transparent;
-    background: -webkit-linear-gradient(16deg, var(--color-gradient-stop-4) 0, var(--color-gradient-stop-5) 9%, var(--color-gradient-stop-6) 20%, var(--color-gradient-stop-6) 24%, var(--color-gradient-stop-5) 35%, var(--color-gradient-stop-4) 44%, var(--color-gradient-stop-5) 50%, var(--color-gradient-stop-6) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
-    background: linear-gradient(74deg, var(--color-gradient-stop-4) 0, var(--color-gradient-stop-5) 9%, var(--color-gradient-stop-6) 20%, var(--color-gradient-stop-6) 24%, var(--color-gradient-stop-5) 35%, var(--color-gradient-stop-4) 44%, var(--color-gradient-stop-5) 50%, var(--color-gradient-stop-6) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
+    background: -webkit-linear-gradient(16deg, var(--color-gradient-stop-2-1) 0, var(--color-gradient-stop-2-2) 9%, var(--color-gradient-stop-2-3) 20%, var(--color-gradient-stop-2-3) 24%, var(--color-gradient-stop-2-2) 35%, var(--color-gradient-stop-2-1) 44%, var(--color-gradient-stop-2-2) 50%, var(--color-gradient-stop-2-3) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
+    background: linear-gradient(74deg, var(--color-gradient-stop-2-1) 0, var(--color-gradient-stop-2-2) 9%, var(--color-gradient-stop-2-3) 20%, var(--color-gradient-stop-2-3) 24%, var(--color-gradient-stop-2-2) 35%, var(--color-gradient-stop-2-1) 44%, var(--color-gradient-stop-2-2) 50%, var(--color-gradient-stop-2-3) 56%, var(--color-surface) 75%, var(--color-surface) 100%);
     background-size: 400% 100%;
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.animate {
+    animation: slideBackground 1s ease-in-out forwards;
 }
 
 /* 排版预设 */
