--- a/style_preset.css
+++ b/style_preset.css
@@ -123,3 +123,8 @@
 .text-margin-bottom {
     margin-bottom: 30px;
 }
+
+.d-flex {
+    padding-top: 20px !important;
+    margin-bottom: 20px !important;
+}
