--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html {
 .header-h1 {
     margin: 0 4px;
     font-size: 24px;
-    color: var(--color-dusty-blue);
+    color: var(--color-dusty-pink);
     position: relative;
 }
 .header-h1::after {
@@ -47,7 +47,7 @@ html {
     top: 50%;
     transform: translateY(-50%);
     margin-left: 10px;
-    color: var(--color-dusty-blue);
+    color: var(--color-dusty-pink);
 }
 
 .adding-title {
@@ -56,56 +56,7 @@ html {
     float: left;
     margin: 0 4px;
     font-size: 24px;
-    color: var(--color-dusty-blue);
-}
-
-.goto{
-    position: relative;
-    display: flex;
-    float: left;
-    align-items: center;
-    margin-top: 10px;
-    margin-left: 10px;
-    z-index: 4;
-}
-
-.goto a{
-    margin-right: 10px;
-}
-
-.language-selector {
-    position: relative;
-    display: flex;
-    float: right;
-    align-items: center;
-    margin-top: 10px;
-    margin-right: 10px;
-    z-index: 3;
-}
-
-.language-selector span,
-.goto span {
-    margin-right: 6px;
-    color: var(--color-dusty-blue);
-}
-
-#language {
-    border: 1px solid var(--color-pastel-blue);
-    border-radius: 8px;
-    padding: 4px 8px;
-    font-size: 16px;
-    color: var(--color-dusty-blue);
-}
-
-#language:focus {
-    outline: none;
-    border-color: var(--color-faded-blue);
-}
-
-#language option {
-    padding: 4px 8px;
-    font-size: 16px;
-    color: var(--color-dusty-blue);
+    color: var(--color-dusty-pink);
 }
 
 h1 {
@@ -181,7 +132,7 @@ html {
     display: block;
     opacity: 0%;
     position: absolute;
-    color: var(--color-navy-blue);
+    color: var(--color-dead-pink);
     font-size: 13px;
 }
 
@@ -190,7 +141,7 @@ html {
 }
 
 .icon-bar span {
-    color: var(--color-navy-blue);
+    color: var(--color-dead-pink);
     transition: var(--transition-ease);
 }
 
@@ -199,7 +150,7 @@ html {
 }
 
 .icon-bar-mobile span {
-    color: var(--color-navy-blue);
+    color: var(--color-dead-pink);
 }
 
 .icon-bar a {
@@ -326,7 +277,7 @@ html {
     background-size: cover;
     min-height: 100%;
     height: auto;
-    background-color: var(--color-light-blue);
+    background-color: var(--color-light-pink);
     z-index: -2;
 }
 
@@ -404,7 +355,7 @@ html {
     background-image: url("./img/chapter2.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-color: var(--color-pastel-blue);
+    background-color: var(--color-pastel-pink);
 }
 
 .bgimg-1,
@@ -428,12 +379,14 @@ html {
     transform: translate(-50%, -50%);
     text-align: center;
     width: max-content;
-    color: var(--color-navy-blue);
+    color: var(--color-dead-pink);
     background-color: rgba(255, 255, 255, 0.8);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     padding-top: 30px;
     padding-bottom: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
     z-index: -1;
 }
 
@@ -444,7 +397,7 @@ html {
     right: 10px;
     bottom: 10px;
     left: 10px;
-    border: 2px solid var(--color-medium-blue);
+    border: 2px solid var(--color-medium-pink);
 }
 
 .title-text-large {
@@ -480,7 +433,7 @@ html {
 
 /* 背景色 */
 .bg-lightblue {
-    background-color: var(--color-light-blue);
+    background-color: var(--color-light-pink);
 }
 
 /* 在小于等于768px的窗口宽度下修改字体大小 */
@@ -520,85 +473,7 @@ nav {
 
 nav span {
     margin-right: 6px;
-    color: var(--color-dusty-blue);
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown a {
-    color: var(--color-dusty-blue);
-}
-
-.clickbtn {
-    border: 1px solid var(--color-pastel-blue);
-    border-radius: 8px;
-    padding: 0px 8px;
-    font-size: 16px;
-    color: var(--color-dusty-blue);
-    text-decoration: none;
-}
-
-.dropbtn {
-    border: 1px solid var(--color-pastel-blue);
-    border-radius: 8px;
-    padding: 6px 8px;
-    font-size: 16px;
-    color: var(--color-dusty-blue);
-    text-decoration: none;
-}
-
-.dropbtn:hover,
-.clickbtn:hover {
-    color: var(--color-navy-blue);
-}
-
-.dropbtn:focus,
-.clickbtn:focus {
-    color: var(--color-dusty-blue);
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    margin-top: 6px;
-    right: 0;
-    background-color: rgba(249, 249, 249, 0.9);
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    border: 1px solid var(--color-pastel-blue);
-    border-radius: 8px;
-    overflow: hidden;
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-}
-
-#dropdown-content {
-    transition: var(--transition-ease);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    color: var(--color-dark-blue);
-    background-color: var(--color-light-blue);
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn,
-.clickbtn:hover {
-    background-color: var(--color-pastel-blue)
+    color: var(--color-dusty-pink);
 }
 
 .comic-container {
