--- a/style_preset.css
+++ b/style_preset.css
@@ -8,6 +8,8 @@
     --color-dark-pink: rgb(120, 60, 90);
     --color-dead-pink: rgb(100, 80, 100);  /* 饱和度较低的 */
 
+    --color-bg-pink: rgb(253, 243, 244);
+
     --color-gradient-stop-1-1: #4285f4;
     --color-gradient-stop-1-2: #9b72cb;
     --color-gradient-stop-1-3: #d96570;
