--- a/style_preset.css
+++ b/style_preset.css
@@ -10,9 +10,9 @@
 
     --color-bg-pink: rgb(253, 243, 244);
 
-    --color-gradient-stop-1-1: #4285f4;
-    --color-gradient-stop-1-2: #9b72cb;
-    --color-gradient-stop-1-3: #d96570;
+    --color-gradient-stop-1-1: #e18ca7;
+    --color-gradient-stop-1-2: #d47d99;
+    --color-gradient-stop-1-3: #dd87a2;
 
     --color-gradient-stop-2-1: #dd812b;
     --color-gradient-stop-2-2: #896387;
@@ -28,6 +28,41 @@
     --color-oceania: #68c56d;
 
     --color-text-gray: #aaaaaa;
+}
+
+@font-face {
+    font-family: 'puhuiti';
+    src: url('fonts/Alibaba-PuHuiTi-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'puhuiti';
+    src: url('fonts/Alibaba-PuHuiTi-Medium.ttf') format('truetype');
+    font-weight: medium;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'puhuiti';
+    src: url('fonts/Alibaba-PuHuiTi-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SongTi';
+    src: url('fonts/SongTi.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'MingChao';
+    src: url('fonts/MingChao.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /* 预设值 */
