--- a/style.css
+++ b/style.css
@@ -291,6 +291,17 @@ html {
     z-index: -2;
 }
 
+/* 确保视频覆盖整个背景 */
+#bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
 @media only screen and (min-width: 768px) {
     .bgimg-1 {
         background-image: url("./img/title1.png");
