modified:   index.html 	modified:   main_js_for_test.js 	modified:   style_for_test.css

--- a/style_for_test.css
+++ b/style_for_test.css
@@ -161,3 +161,7 @@ mark.highlight.highlight-active::before {
     font: 14px "SongTi", sans-serif, bold;
     line-height: 2.5;
 }
+
+#intro-video-element {
+    display: none;
+}
