modified:   index.html 	modified:   main_js_for_test.js 	modified:   style_for_test.css

--- a/style_for_test.css
+++ b/style_for_test.css
@@ -165,3 +165,7 @@ mark.highlight.highlight-active::before {
 #intro-video-element {
     display: none;
 }
+
+#intro-title {
+    transition: opacity 1s;
+}
