new file:   data/divorce-20c.js 	renamed:    data/devorce-detail.js -> data/divorce-detail.js 	renamed:    data/main.js -> data/divorce-rate.js 	new file:   data/income-bin.js 	new file:   data/income-rural.js 	deleted:    "data/\345\256\230\346\226\271\345\252\222\344\275\223_\351\242\221\346\254\241\345\211\21510\346\235\241\345\275\242\345\233\276_\345\220\210\345\271\266\345\256\230\345\252\222.html" 	deleted:    "data/\345\276\256\345\215\232\347\224\250\346\210\267_\346\203\205\346\204\237\345\200\276\345\220\221\347\216\257\345\275\242\345\233\276.html" 	deleted:    "data/\347\237\245\344\271\216_\346\203\205\346\204\237\345\200\276\345\220\221\347\216\257\345\275\242\345\233\276.html" 	deleted:    demo/background.png 	deleted:    demo/styles.css 	modified:   demo/test1.html 	new file:   demo/test2.html 	new file:   demo/test3.html 	modified:   index.html 	modified:   style_for_test.css

--- a/style_for_test.css
+++ b/style_for_test.css
@@ -152,6 +152,11 @@ mark.highlight.highlight-active::before {
     line-height: 2.5;
 }
 
+.font-songti-medium{
+    font: 24px "SongTi", sans-serif, bold;
+    line-height: 2.5;
+}
+
 .font-songti{
     font: 20px "SongTi", sans-serif, bold;
     line-height: 2.5;
