--- a/style.css
+++ b/style.css
@@ -22,13 +22,28 @@ html {
     color: var(--color-dusty-pink);
 }
 
-.adding-title {
+/* .adding-title {
     position: absolute;
     display: flex;
     float: left;
     margin: 0 4px;
     font-size: 24px;
     color: var(--color-dusty-pink);
+} */
+
+.adding-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.adding-title img {
+    width: 160px;
+    height: auto;
 }
 
 h1 {
