deleted:    avatar_test.html 	deleted:    img/1.png 	new file:   img/1.webp 	deleted:    img/2.png 	new file:   img/2.webp 	deleted:    img/3.png 	new file:   img/3.webp 	deleted:    img/4.png 	new file:   img/4.webp 	deleted:    "img/DALL\302\267E 2024-05-13 09.15.39 - A wide format illustration depicting the journey of motherhood, showing a mother with her child at various stages of growth against a solid pink backg.webp" 	deleted:    img/avatar1.png 	deleted:    img/avatar2.png 	deleted:    img/avatar3.png 	deleted:    img/avatar4.png 	deleted:    img/avatar5.png 	deleted:    img/avatar6.png 	deleted:    img/detail1.jpg 	deleted:    img/detail2.jpg 	deleted:    img/detail3.jpg 	deleted:    img/portrait1.png 	deleted:    img/portrait2.png 	deleted:    img/portrait3.png 	deleted:    img/q1.png 	deleted:    img/totheend.png 	new file:   img/totheend.webp 	modified:   index.html 	modified:   main_js_for_test.js 	modified:   style_for_test.css 	deleted:    "\346\274\253\347\224\273/\345\221\212\345\210\253.png" 	new file:   "\346\274\253\347\224\273/\345\221\212\345\210\253.webp" 	deleted:    "\346\274\253\347\224\273/\345\230\230\344\273\226\345\234\250\347\235\241\350\247\211.png" 	new file:   "\346\274\253\347\224\273/\345\230\230\344\273\226\345\234\250\347\235\241\350\247\211.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/1.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/1.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/2.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/2.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/3.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/3.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/4.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/4.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/5.png" 	new file:   "\346\274\253\347\224\273/\345\257\271

--- a/style_for_test.css
+++ b/style_for_test.css
@@ -206,7 +206,7 @@ mark.highlight.highlight-active::before {
     position: relative;
     width: 100%;
     height: auto;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.2)), url('img/totheend.png');
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0.8) 70%, rgba(255, 255, 255, 0.2)), url('img/totheend.webp');
     background-size: cover;
     background-position: center;
 }
